# TAOS

./: .gdbinit  .gitignore  0  Makefile  README.md  compile_asm.sh  compile_debug.sh  compile_test.sh  dump  hello  mmap  mmap.c  setup_sysroot.sh  test_df_race.sh
kernel/: Cargo.toml  limage_config.toml  rust-toolchain.toml  temp  x86_64-taos.json  x86_64-unknown-none.json
kernel/.cargo/: config.toml
kernel/src/: init.rs  lib.rs  main.rs  shell.rs
kernel/src/constants/: devices.rs  idt.rs  memory.rs  mod.rs  processes.rs  syscalls.rs  x2apic.rs
kernel/src/devices/: framebuffer.rs  keyboard.rs  mmio.rs  mod.rs  mouse.rs  pci.rs  sd_card.rs
kernel/src/devices/audio/: buffer.rs  command_buffer.rs  commands.rs  debug.rs  dma.rs  hda.rs  hda_regs.rs  mod.rs  wav_parser.rs  widget_info.rs
kernel/src/devices/graphics/: framebuffer.rs  (+2 more)
kernel/src/events/: event.rs  event_runner.rs  futures.rs  mod.rs
kernel/src/filesys/: mod.rs  syscalls.rs
kernel/src/interrupts/: gdt.rs  idt.rs  io_apic.rs  mod.rs  x2apic.rs
kernel/src/ipc/: channel.rs  error.rs  fd_table.rs  messages.rs  mod.rs  mount_manager.rs  namespace.rs  requests.rs  responses.rs  serialization.rs  spsc.rs  spsc_pool.rs
kernel/src/memory/: bitmap_frame_allocator.rs  buddy_frame_allocator.rs  frame_allocator.rs  heap.rs  mm.rs  mod.rs  page_fault.rs  paging.rs
kernel/src/net/: mod.rs
kernel/src/processes/: loader.rs  mod.rs  process.rs  registers.rs  signal.rs  signals.rs
kernel/src/shell/: shell.rs
kernel/src/syscalls/: block.rs  file_syscalls.rs  fork.rs  memorymap.rs  mmap.rs  mod.rs  sockets.rs  syscall_arguments.rs  syscall_handlers.rs
(+105 files in other folders)
